Overall check uitgevoerd